version=12.1.47_dev
# bug fix: user-defined @ atom sets should be saved in state
# bug fix: defined @ atom sets not indicating changes when models are deleted
# bug fix: parameter setting of Jmol integer parameters with float values may not set variables
#    example: set dotScale 3.0   does set that variable, but there is no effect. (not fixed in 12.0)
#
# new feature: MO POINTS npts    -- displays MOs as pointilist objects
#     load c6h6.smol
#     mo points 5000
#     mo homo
# new feature: set dotScale applies to isosurface points in pointilist objects
# new feature: isosurface atomicOrbital n l m [zeff] [ POINTS npts ]
#       allows Monte Carlo type orbital display, as for http://stolaf.edu/people/hansonr/origami/WIN/orbital1.zip
#       (see http://stolaf.edu/people/hansonr/orbital), e.g.:
#
#         isosurface atomicOrbital 3 2 1 POINTS 5000
#
# new feature: SCALE parameter implemented for atomic orbitals.
#



Former-commit-id: 5d5204077ff28cba5e5ede3f05a9230bff0b914a